# LO17ProjetRAG

./: .dockerignore  .gitignore  Dockerfile  app.py  create_database.py  data_scrapper.py  evaluation.py  evaluation_results.csv  generate_testset.py  inference.py  k8s-lo17-rag-app.yaml  launch.ps1  playground.ipynb  pyproject.toml  rag_core.py  readme.md  streamlit_app.py
.streamlit/: config.toml
dataset_rag_lol_definitive/: synthetic_evaluation.csv
