[project]
name = "lo17projetrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "chromadb>=1.0.11",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.5",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "ragas>=0.2.15",
    "streamlit>=1.45.1",
]
