[project]
name = "lo17projetrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "chromadb>=1.0.11",
    "ipykernel>=6.29.5",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "numpy<2.0",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "python-magic-bin>=0.4.14",
    "ragas>=0.2.15",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.4",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
    "unstructured>=0.17.2",
]
